--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
     <link rel="icon shortcut" href="./images/icon/dev.png" type="image" />
     <link rel="stylesheet" href="./css/main.min.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <header class="page-header">
@@ -105,44 +106,44 @@
             />
             <div>
               <div class="aboutMe__text">
-                <p class="aboutMe__card">
+                <p class="aboutMe__card animation-show anim-items">
                   Привіт! Мене звати Віта і я нарешті наблизилась до своєї мрії
                   - стати Full-stack Developer. <br />
 
                   Мій шлях до розробки був довгим але головне, який бекграунд
                   він мені залишив!
                 </p>
-                <p class="aboutMe__card">
+                <p class="aboutMe__card animation-show anim-items">
                   Почалося все з Магістра Банківської справи і роботи по
                   спеціальності 9 років поспіль. Так, фінансовий аналіз
                   підприємст від маленьких до гігантських мене запалював.
                 </p>
-                <p class="aboutMe__card">
+                <p class="aboutMe__card animation-show anim-items">
                   Успішно пройшовшла шлях від звічайного спеціаліста до
                   керівника відділу кредитування юридичних осіб. Пишаюсь цим!
                   Мені було цікаво!
                 </p>
-                <p class="aboutMe__card">
+                <p class="aboutMe__card animation-show anim-items">
                   Але у якийсь момент я зрозуміла, що розвитку для мене більше
                   немає, я не бачила шляху далі у цій сфері.
                 </p>
-                <p class="aboutMe__card">
+                <p class="aboutMe__card animation-show anim-items">
                   Тому, я вирішила відкрити власну справу та стала
                   співзасновником Костюмерної. Тут, в основному, займалась
                   організацією процесів - від фінансових до набору персоналу.
                 </p>
-                <p class="aboutMe__card">
+                <p class="aboutMe__card animation-show anim-items">
                   У цій справі мене також запалювали нові можливості, нові
                   занння, збільшення прибутку, розширення. За 5 років роботи
                   вдалося збільшити прибуток в 4 рази, розширити площу
                   костюмерної з 10 кв.м. до 100 кв.м.
                 </p>
-                <p class="aboutMe__card">
+                <p class="aboutMe__card animation-show anim-items">
                   Коли ми почали планувати відкриття філії почалася епідемія
                   COVID. Довелося прийняти болюче рішення про закриття цього
                   проєкту.
                 </p>
-                <p class="aboutMe__card">
+                <p class="aboutMe__card animation-show anim-items">
                   Але увесь цей час я мріяла про розробку! В обох напрямках я
                   намагалась створити програмки для автоматизації рутинних
                   процесів. У банківській сфері - це були форми з автоматичним
@@ -150,18 +151,18 @@
                   справі - створила програмку на базі Макросів Excel для швикого
                   заповнення форм видачі замовлення та інвертаризації.
                 </p>
-                <p class="aboutMe__card">
+                <p class="aboutMe__card animation-show anim-items">
                   Тому, коли зʼявився час на навчання я відразу ринулась у
                   вивчення сфери IT (мов, напрямків). Почала із самостійного
                   вивчення основ - мене дуже захопило це, але зрозуміла, що то
                   буде дуже довго! Треба курси! Сказано - зроблено (дякуючи
                   підтримці рідних).
                 </p>
-                <p class="aboutMe__card">
+                <p class="aboutMe__card animation-show anim-items">
                   Знайшла навчальні курси у Bootcamp-форматі (24 години на добу,
                   7 днів на тиждень) і мене вирвало із буденного життя.
                 </p>
-                <p class="aboutMe__card">
+                <p class="aboutMe__card animation-show anim-items">
                   І ось я тут! На своєму сайті, зробленому самотужки і з
                   портфоліо, яке я постійно поповнюю!
                 </p>
@@ -319,7 +320,11 @@
       <div id="portfolio-section" class="portfolio-section">
         <div class="container">
           <ul class="portfolio__list">
-            <li class="portfolio__item">
+            <li
+              class="portfolio__item"
+              data-aos="fade-up"
+              data-aos-anchor-placement="bottom-bottom"
+            >
               <div class="portfolio__box">
                 <div class="portfolio__tumb-img">
                   <a
@@ -371,7 +376,11 @@
                 картка з більшою інформацією
               </div>
             </li>
-            <li class="portfolio__item">
+            <li
+              class="portfolio__item"
+              data-aos="fade-up"
+              data-aos-anchor-placement="bottom-bottom"
+            >
               <div class="portfolio__box">
                 <div class="portfolio__tumb-img">
                   <a
@@ -419,7 +428,11 @@
                 картка з більшою інформацією
               </div>
             </li>
-            <li class="portfolio__item">
+            <li
+              class="portfolio__item"
+              data-aos="fade-up"
+              data-aos-anchor-placement="bottom-bottom"
+            >
               <div class="portfolio__box">
                 <div class="portfolio__tumb-img">
                   <a
@@ -463,7 +476,11 @@
                 картка з більшою інформацією
               </div>
             </li>
-            <li class="portfolio__item">
+            <li
+              class="portfolio__item"
+              data-aos="fade-up"
+              data-aos-anchor-placement="bottom-bottom"
+            >
               <div class="portfolio__box">
                 <div class="portfolio__tumb-img">
                   <a
@@ -513,7 +530,11 @@
                 картка з більшою інформацією
               </div>
             </li>
-            <li class="portfolio__item">
+            <li
+              class="portfolio__item"
+              data-aos="fade-up"
+              data-aos-anchor-placement="bottom-bottom"
+            >
               <div class="portfolio__box">
                 <div class="portfolio__tumb-img">
                   <a
@@ -601,6 +622,8 @@
     <script src="./js/vantaJs/three.min.js"></script>
     <script src="./js/vantaJs/vanta.net.min.js"></script>
     <script src="./js/vantaJs/app.js"></script>
-    <script src="./js/navActive.js"></script>
+    <script src="./js/animationActive.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="./js/animationBlock.js"></script>
   </body>
 </html>
