--- a/index.html
+++ b/index.html
@@ -166,6 +166,10 @@
                   І ось я тут! На своєму сайті, зробленому самотужки і з
                   портфоліо, яке я постійно поповнюю!
                 </p>
+                <p class="aboutMe__card animation-show anim-items">
+                  Про результат навчання найкраще розкаже моє портфоліо
+                  [анімована стрілка вниз]
+                </p>
               </div>
               <!-- <a
                 href="https://drive.google.com/file/d/1366EHk3Jkuc4sqG_lXIOd9Cr0U1oszal/view?usp=sharing"
