--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             />
             <div>
               <div class="aboutMe__text">
-                <p class="aboutMe__card animation-show anim-items">
+                <!-- <p class="aboutMe__card animation-show anim-items">
                   Привіт! Мене звати Віта і я нарешті наблизилась до своєї мрії
                   - стати Full-stack Developer. <br />
 
@@ -141,6 +141,67 @@
                 <p class="aboutMe__card animation-show anim-items">
                   Коли ми почали планувати відкриття філії почалася епідемія
                   COVID. Довелося прийняти болюче рішення про закриття цього
+                  проєкту.
+                </p>
+                <p class="aboutMe__card animation-show anim-items">
+                  Але увесь цей час я мріяла про розробку! В обох напрямках я
+                  намагалась створити програмки для автоматизації рутинних
+                  процесів. У банківській сфері - це були форми з автоматичним
+                  підрахунком різноманітних фінансових показників. У власній
+                  справі - створила програмку на базі Макросів Excel для швикого
+                  заповнення форм видачі замовлення та інвертаризації.
+                </p>
+                <p class="aboutMe__card animation-show anim-items">
+                  Тому, коли зʼявився час на навчання я відразу ринулась у
+                  вивчення сфери IT (мов, напрямків). Почала із самостійного
+                  вивчення основ - мене дуже захопило це, але зрозуміла, що то
+                  буде дуже довго! Треба курси! Сказано - зроблено (дякуючи
+                  підтримці рідних).
+                </p>
+                <p class="aboutMe__card animation-show anim-items">
+                  Знайшла навчальні курси у Bootcamp-форматі (24 години на добу,
+                  7 днів на тиждень) і мене вирвало із буденного життя.
+                </p>
+                <p class="aboutMe__card animation-show anim-items">
+                  І ось я тут! На своєму сайті, зробленому самотужки і з
+                  портфоліо, яке я постійно поповнюю!
+                </p>
+                <p class="aboutMe__card animation-show anim-items">
+                  Про результат навчання найкраще розкаже моє портфоліо
+                  [анімована стрілка вниз]
+                </p> -->
+                <p class="aboutMe__card animation-show anim-items">
+                  Привіт! Мене звати Віта і я нарешті наблизилась до своєї мрії
+                  - стати Full-stack Developer. <br />
+
+                  Мій шлях до розробки був довгим але головне, який бекграунд
+                  він мені залишив!
+                </p>
+                <p class="aboutMe__card animation-show anim-items">
+                  <span>Магістр Банківської справи</span></br>
+                  Результат &#10144;
+                  </br>сфера: фінансовим аналіз компаній для кредитування та інвестування;
+                  </br> починала з невеликих підприємств та згодом працювала з великими компаніями та корпораціями;
+                  </br>пройшла шлях від звичайного спеціаліста до керівника відділу;
+                <p class="aboutMe__card animation-show anim-items">
+                  У цей момент я зрозуміла, що розвитку для мене більше
+                  немає, я не бачила шляху далі у цій сфері.
+                </br> Кардинальнo зміна напрямoк діяльності
+                </p>
+                <p class="aboutMe__card animation-show anim-items">
+                  
+                  
+                  <span>співзасновник Костюмерної</span>
+                  </br>Результат &#10144;
+                  </br> організація процесів - від фінансових до набору персоналу;
+                  </br> збільшила прибуток в 4 рази;
+                  </br> розширила площу костюмерної з 10 кв.м. до 100 кв.м.
+
+                </p>
+                <p class="aboutMe__card animation-show anim-items">
+                  Коли ми почали планувати відкриття філії почалася епідемія
+                  COVID. 
+                  </br>Довелося прийняти болюче рішення про закриття цього
                   проєкту.
                 </p>
                 <p class="aboutMe__card animation-show anim-items">
